Bug Fixing : Burger size on smaller devices

--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -8,17 +8,24 @@
     font-size: 1.2rem;
 }
 
-@media (min-width: 500px) and (min-height: 400px) {
+@media (min-width: 400px) and (min-height: 400px) {
     .Burger {
-        width: 350px;
+        width: 300px;
         height: 300px;
     }
 }
 
 @media (min-width: 500px) and (min-height: 401px) {
     .Burger {
-        width: 450px;
+        width: 400px;
         height: 400px;
+    }
+}
+
+@media (min-width: 600px) and (min-height: 600px) {
+    .Burger {
+        width: 500px;
+        height: 500px;
     }
 }
 
